# bevy_survival_crafting_game

./: Cargo.toml  LICENSE  README.md
assets/: fire_overlay.wgsl  placeholder_desc.ron  recipes.ron  roboto.kayak_font  sprites_desc.ron
notes/: TODOs.txt  adding_crafting_recipe.txt
src/: assets.rs  build.rs  crafting.rs  error.rs  fire_graphics.rs  game_camera.rs  game_ui.rs  game_ui_widgets.rs  inventory.rs  inventory_ui.rs  item.rs  main.rs  mouse.rs  player.rs  prelude.rs
