[package]
name = "bevy_survival_crafting_game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy-inspector-egui = "0.11.0"
serde = "1.0.136"
ron = "0.7.0"
kayak_ui = { git = "https://github.com/StarArawn/kayak_ui", features = [
    "bevy_renderer",
] }
